Added projects file
added basic info to projects file

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
         <title>BLAH</title>
     </head>
     <body>
-        
+        <h1>Home</h1>
+        <p>If you go to <a href="https://www.google.com"> this website </a>, you can search things. </p>
+        <p>If you go to <a href="testing.html"> this website </a>, you can search things. </p>
     </body>
 </html>
