Add Image to Projects.html
Added Yankees picture

--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,8 @@
     <body>
         <p>
             <h1>Audio Project</h1>
-
+                <p> <img src="images/yankees.jpg" alt="Players at Yankees Stadium" title="Video Essay Project" /> 
+                </p>
             <h1>Video Project</h1>
         </p>
     </body>
