--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <body>
         <p>
             <h1>Audio Project</h1>
-                <p> <img src="images/yankees.jpg" alt="Players at Yankees Stadium" title="Video Essay Project" /> 
+                <p> <img src="images/yankees.jpg" alt="Players at Yankees Stadium" title="Video Essay Project" height="600" width="400"/> 
                 </p>
             <h1>Video Project</h1>
         </p>
