--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
             <h1>Audio Project</h1>
                 
             <h1>Video Project</h1>
-        <p> <img src="images/yankees.jpg" alt="Players at Yankees Stadium" title="Video Essay Project" height="600" width="800"/> 
+        <p> <img src="images/yankees.jpg" alt="Players at Yankees Stadium" title="Video Essay Project" height="600" width="800" align="left"/> 
                 </p>
         </p>
     </body>
