--- a/projects.html
+++ b/projects.html
@@ -5,9 +5,10 @@
     </head>
     <body>
         <p>
-            <h1>Audio Project</h1>
-                
-            <h1>Video Project</h1>
+            <h1 id="audproj">Audio Project</h1>
+                <style> #audproj {color: red;</style>
+                <style>#vidproj {color: blue ;</style>
+            <h1 id="vidproj" >Video Project</h1>
         <p> <img src="Assets/yankees.jpg" alt="Players on the feild at Yankees Stadium" title="Video Essay Project" height="600" width="800" align="left"/> 
                 </p>
         </p>
