--- a/projects.html
+++ b/projects.html
@@ -4,15 +4,25 @@
         <title>Projects</title>
     </head>
     <body>
-        <p>
+        
+            <div id="audio">
             <h1 id="audproj">Audio Project</h1>
-                <style> #audproj {color: red;</style>
-                <style>#vidproj {color: blue ;</style>
-            <h1 id="vidproj" >Video Project</h1>
-        <p> <img src="Assets/yankees.jpg" alt="Players on the feild at Yankees Stadium" title="Video Essay Project" height="600" width="800" align="left"/> 
-                </p>
+                <style> #audproj {color: red;}</style>
+                <style> #vidproj {color: blue;}</style>
+       <p>
+        This is an audio only project that tells the story of Mario Lemieux saving his former team, the Pittsburgh Penguins, from bankruptcy and relocation.
         </p>
-    </body>
+       </div>
+             <div id="video">    
+            <h1 id="vidproj" >Video Project</h1>
+        <p> 
+            This is a video essay that discusses the issue of the lack of a salary cap in Major League Baseball.
+            <img src="Assets/yankees.jpg" alt="Players on the feild at Yankees Stadium" title="Video Essay Project" height="600" width="800" align="left"/> 
+        </p>
+       
+             </div>  
+   
+    </body> 
 
 
 
