Added audio project to assets folder

--- a/projects.html
+++ b/projects.html
@@ -8,11 +8,15 @@
             <div id="audio">
             <h1 id="audproj">Audio Project</h1>
                 <style> #audproj {color: red;}</style>
-                <style> #vidproj {color: blue;}</style>
+                
        <p>
         This is an audio only project that tells the story of Mario Lemieux saving his former team, the Pittsburgh Penguins, from bankruptcy and relocation.
         </p>
+        <audio controls>
+            <source src="Assets/Gabe_Final_Draft.mp3">
+        </audio>
        </div>
+             <style> #vidproj {color: blue;}</style>
              <div id="video">    
             <h1 id="vidproj" >Video Project</h1>
         <p> 
