--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
+<!DOCTYPE html>
 <html>
     <head>
-        <title>BLAH</title>
+        <title>Index</title>
     </head>
     <body>
         <h1>Home</h1>
-        <p>If you go to <a href="https://www.google.com"> this website </a>, you can search things. </p>
-        <p>If you go to <a href="testing.html"> this website </a>, you can search things. </p>
+        <!--Below is the links to other pages -->
+        <p>If you go to <a href="projects.html"> this page </a>, you can see the projects I have worked on. </p>
+        <p>If you go to <a href="AudioCredits.html"> this page </a>, you can see the credits for my audio project. </p>
+        <p>If you go to <a href="VideoCredits.html"> this page </a>, you can see the credits for my video essay.</p>
     </body>
 </html>
