updated credit pages titles

--- a/AudioCredits.html
+++ b/AudioCredits.html
@@ -6,7 +6,7 @@
 <body>
     
     <p>
-        <h1>Project Summary </h1>
+        <h1>Audio Narrative Info </h1>
         <p> <a href="index.html">Home Page</a> </p>
         <p> <a href="projects.html">Back to Projects</a> </p>
      </p>
@@ -17,6 +17,10 @@
     <p>As an avid fan of Pittsburgh sports, I chose to tell this story because, despite these events happening before I was born, this story means so much to me. Had the Penguins folded or been relocated, some of my favorite memories from my life would have never happened. I also feel like a lot of people don't truly understand how much Mario Lemieux has done for the team. During a time when the Penguins are currently struggling performance-wise, I thought it was important to take a step back and relive the events that allowed Penguins fans to even have the chance to watch a team get old and start to play poorly. I wanted this piece to be a reminder that this city is incredibly lucky to still have a hockey team at all. We should be appreciative of the amazing moments that we were able to experience during the 2000s. My group told me that my intro music was slightly overpowering so I went in and fixed that.</p>
     <p>As far as sources go, I used the NYT article and the Forbes article to help get accurate facts and numbers. The Forbes article gave me the amount of deferred money Mario had with the team. I used both articles to find out how much they were in debt. I struggled to find a source that gave a specific number for how much Lemiuex and his investment group bought the team for but was thankfully able to find it in the Forbes article. Both texts had consistent information between each other. The NYT article was written during the events, so I thought it would be good to use a primary source. 
     </p>
+</p>
+
+<p>
+
 </p>
 
 
