--- a/AudioCredits.html
+++ b/AudioCredits.html
@@ -19,10 +19,36 @@
     </p>
 </p>
 
+
+    <h2>Credits</h2>
 <p>
-
+    <h3>Sources</h3>
+<ul>
+    <li>"Mario Lemieux, Value Investor", Forbes Magazine, 06/06/2013</li>
+    <li>"Lemieux Is Trying to Save the Bankrupt Penguins", by Joe Lapointe, New York Times, 03/14/1999</li>
+</ul>
 </p>
-
+<p>  
+<h3>Songs</h3>
+<ul>
+    <li>"Little Triumph" by Aldus-X,<a href="https://freemusicarchive.org/music/aldus-x/giant/little-triumph/">Licensed under CC BY-NC</a></li>
+    <li>"Piano (solo, somber, soundtrack)" by Independent Music Licensing Collective (IMLC), <a href="(https://freemusicarchive.org/music/independent-music-licensing-collective-imlc/soularflair-singles-1/piano-solo-somber-soundtrack/">Licensed under CC BY-NC-ND 4.0</a></li>
+    <li>"Triumph" by Ketsa,<a href="https://freemusicarchive.org/music/Ketsa/the-new-world/triumph/">Licensed under CC BY-NC-ND 4.0</a></li>
+</ul>
+</p>
+<p>
+    <h3>Sound</h3>
+<ul>
+    <li>"skating rink outdoor teenagers play hockey bang boards1" by Kyles, <a href="https://freesound.org/people/kyles/sounds/450742/">Licensed under CC 0</a></li>
+    <li>"extended Hockey arena goal horn applause" by SEF7, <a href="https://freesound.org/people/SEF7/sounds/706596/">Licensed under CC 0 </a></li>
+    <li>"Slapshot Metal Hit0" by pthj412, <a href="https://freesound.org/people/pthj412/sounds/224007/">Licensed under Attribution 3.0 </a></li>
+    <li>"construction jackhammer 75m" by kyles,<a href="https://freesound.org/people/kyles/sounds/637392/">Licensed under CC 0 </a></li>
+    <li>"cha ching" by creek23,<a href="https://freesound.org/people/creek23/sounds/75235/">Licensed under Attribution Non-commercial 4.0</a></li>
+    <li>"bm-PittPensCele" by cmusounddesign, <a href="https://freesound.org/people/cmusounddesign/sounds/71945/">Licensed under Attribution 4.0 </a> </li>
+    <li>"writing_pen" by rui_aires,<a href="https://freesound.org/people/rui_aires/sounds/365893/">Licensed under CC 0</a> </li>
+    <li>"HAMMER_1" by pablodavilla,<a href="https://freesound.org/people/pablodavilla/sounds/592112/">Licensed under CC 0</a></li>
+</ul>
+</p>
 
 </body>
 
