Image size change

--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
             <h1 id="audproj">Audio Project</h1>
                 <style> #audproj {color: goldenrod;}</style>
                 
-            <img src="Assets/Mario 2.jpg" alt="Image of Mario Lemieux" title="Audio Narrative Project Cover"/>
+            <img src="Assets/Mario 2.jpg" alt="Image of Mario Lemieux" title="Audio Narrative Project Cover" height="827" width="600"/>
        <p>
             This is an audio only project that tells the story of Mario Lemieux saving his former team, the Pittsburgh Penguins, from bankruptcy and relocation. You can listen by clicking the playhead below.
         </p>
