--- a/AudioCredits.html
+++ b/AudioCredits.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <title> Audio Project Credits</title>
+        <link href="example.css" type="text/css" rel="stylesheet"/> 
     </head>
 <body>
-    
+   <div class="sum">
     <p>
         <h1>Audio Narrative Info </h1>
         <p> <a href="index.html">Home Page</a> </p>
@@ -19,7 +20,7 @@
     </p>
 </p>
 
-
+</div> 
     <h2>Credits</h2>
 <p>
     <h3>Sources</h3>
@@ -36,7 +37,9 @@
     <li>"Triumph" by Ketsa,<a href="https://freemusicarchive.org/music/Ketsa/the-new-world/triumph/">Licensed under CC BY-NC-ND 4.0</a></li>
 </ul>
 </p>
+<div>
 <p>
+
     <h3>Sound</h3>
 <ul>
     <li>"skating rink outdoor teenagers play hockey bang boards1" by Kyles, <a href="https://freesound.org/people/kyles/sounds/450742/">Licensed under CC 0</a></li>
@@ -49,7 +52,7 @@
     <li>"HAMMER_1" by pablodavilla,<a href="https://freesound.org/people/pablodavilla/sounds/592112/">Licensed under CC 0</a></li>
 </ul>
 </p>
-
+</div>
 </body>
 
 </html>
