--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
     <head>
         <title>Index</title>
+        <link href="homestyles.css" rel="stylesheet"/>
     </head>
     <body>
         <h1>Home</h1>
         <!--Below is the links to other pages -->
-        <p> Welcome to my portfolio website! Here you will be able to find all of the work that I have done in my Composing Digital Media course. Below are links to my projects and credit pages. Please take a look around this website.</p>
+        <p class="intro"> Welcome to my portfolio website! Here you will be able to find all of the work that I have done in my Composing Digital Media course. Below are links to my projects and credit pages. Please take a look around this website.</p>
         <p>If you go to <a href="projects.html"> this page </a>, you can see the projects I have worked on. </p>
         <p>If you go to <a href="AudioCredits.html"> this page </a>, you can see the credits for my audio project. </p>
         <p>If you go to <a href="VideoCredits.html"> this page </a>, you can see the credits for my video essay.</p>
