changed text color
changes text and background colors four audio credits page

--- a/AudioCredits.html
+++ b/AudioCredits.html
@@ -4,7 +4,8 @@
         <title> Audio Project Credits</title>
         <link href="example.css" type="text/css" rel="stylesheet"/> 
     </head>
-<body>
+<div>
+    <body>
    <div class="sum">
     <p>
         <h1>Audio Narrative Info </h1>
@@ -52,6 +53,7 @@
     <li>"HAMMER_1" by pablodavilla,<a href="https://freesound.org/people/pablodavilla/sounds/592112/">Licensed under CC 0</a></li>
 </ul>
 </p>
+</div>
 </div>
 </body>
 
