--- a/VideoCredits.html
+++ b/VideoCredits.html
@@ -2,20 +2,22 @@
 <html>
     <head>
         <title> Video Essay Credits</title>
+        <link href="vid.css" rel="stylesheet" />
     </head>
 <body>
-<p>
-    <h1>Video Essay Info</h1>
+<div class="sum">
+    <p>
+    <h1 class="sum1">Video Essay Info</h1>
     <p> <a href="index.html">Home Page</a> </p>
     <p> <a href="projects.html">Back to Projects</a> </p>
     <br>
-    <h3>Project Summary</h3>
+    <h3 class="sum3">Project Summary</h3>
 <p>My video essay explores the impact of Major League Baseball’s lack of a salary cap on competitive balance and fan engagement. Unlike the NFL and NBA, MLB allows teams to spend freely, resulting in a significant financial gap between large-market and small-market teams. Wealthy franchises like the Yankees and Dodgers consistently outspend their competition, allowing them to sign top talent and maintain dominance. Meanwhile, smaller teams struggle to retain star players and build long-term success. I will use footage from games, and free-agent signings, along with charts that exemplify the difference between bottom-spending teams and top-spending teams. </p>
 
 <p> I tried to structure the script so that I would be able to put rhetorically effective visuals on the screen to keep the audience engaged. Although finding visual assets was a bit harder than I anticipated, I feel as though the visuals I used were rhetorically effective. As far as engaging with the ongoing conversations about my topic, I talk about how there are a lot of people in power for MLB that don't really want a salary cap to happen, so the odds of it happening are low, but I feel like I give some important evidence to show why we should at least be thinking about a salary cap in professional baseball. The feedback from my group on my initial intro draft was that I should add some sort of audio asset, which led me to add the "take me out to the ballgame" chant at the beginning, which I actually really like. They also helped me with some ideas for the images I looked for. </p>
 
 <p> As far as my sources go, the Baseball America article was probably the most helpful one I found. I used that article to talk about the facts of how many teams have won a championship while being in the top half/top 10 payrolls. It also gave me the images of the list with the championship teams and their payroll rank. The 3 ESPN articles that I used for my sources were used to provide me with some background info along with all the images of the lists that I used throughout the video. These lists included the fan attendance list, payroll list, and World Series winners. </p>
-
+</div>
 <h3> Credits </h3>
 
 <h4>Sources</h4>
