--- a/VideoCredits.html
+++ b/VideoCredits.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title> Video Essay Credits</title>
-        <link href="vid.css" rel="stylesheet" />
+        <link href="vid.css" type="text/css" rel="stylesheet" />
     </head>
 <body>
 <div class="cred">
@@ -12,7 +12,7 @@
     <h1 class="sum1">Video Essay Info</h1>
     <p> <a href="index.html">Home Page</a> </p>
     <p> <a href="projects.html">Back to Projects</a> </p>
-    <br>
+
     <h3 class="sum3">Project Summary</h3>
     <p>My video essay explores the impact of Major League Baseball’s lack of a salary cap on competitive balance and fan engagement. Unlike the NFL and NBA, MLB allows teams to spend freely, resulting in a significant financial gap between large-market and small-market teams. Wealthy franchises like the Yankees and Dodgers consistently outspend their competition, allowing them to sign top talent and maintain dominance. Meanwhile, smaller teams struggle to retain star players and build long-term success. I will use footage from games, and free-agent signings, along with charts that exemplify the difference between bottom-spending teams and top-spending teams. </p>
 
