changed css name and took out padding from vid crdits

--- a/AudioCredits.html
+++ b/AudioCredits.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title> Audio Project Credits</title>
-        <link href="example.css" type="text/css" rel="stylesheet"/> 
+        <link href="aud.css" type="text/css" rel="stylesheet"/> 
     </head>
 <div>
     <body>
