Added Fixed heading to projects pg

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
         <h1>Home</h1>
         <!--Below is the links to other pages -->
         <p class="intro"> Welcome to my portfolio website! Here you will be able to find all of the work that I have done in my Composing Digital Media course. Below are links to my projects and credit pages. Please take a look around this website.</p>
-        <p>If you go to <a href="projects.html"> this page </a>, you can see the projects I have worked on. </p>
+       <p> I have spent a semester working on these projects (including this website). For the compositon of this website, I wanted to visually create a website that represented the projects themselves. I mainly did this in the credits sections for both projects. For the projects page, I just liked the way it looked with the white background and pictures in it. I thought that adding background/box colors to the projects page would just have too much going on. Instead, I left the background white so the pictures could stand out and just made the color of the headings represntative of the project.   </p>
+        <P>For the audio project, I made the background goldenrod and the information box black. I did this because the project is about the Pittsburgh Penguins. I wanted to represent the team that the project is about by using the teams colors. I also used grey for the headers because it represents the steel city while still being to see clearly.  </p>
+       <p> I used a similar approach for the Video Essay project. Since the project was about the MLB, I made the credit page colors from the mlb. I looked up the hex codes for the MLB's red and blue. I also threw in the hex code for the NEw York Yankee's grey. I just felt like this was the best way to sublty represent my project in the credits section. I wanted to make each credits section look very different so it was easy to tell if you were accidentally in the wrong section of the website. </p>
+            <p>If you go to <a href="projects.html"> this page </a>, you can see the projects I have worked on. </p>
         <p>If you go to <a href="AudioCredits.html"> this page </a>, you can see the credits for my audio project. </p>
         <p>If you go to <a href="VideoCredits.html"> this page </a>, you can see the credits for my video essay.</p>
     </body>
