--- a/projects.html
+++ b/projects.html
@@ -2,12 +2,17 @@
 <html>
     <head>
         <title>Projects</title>
+        <link href="projects.css" type="text/css" rel="stylesheet"/> 
     </head>
     <body>
-        <h1>My Projects</h1>
+        <h1 class="one">My Projects</h1> 
+        <br>
+        <br>
+        <br>
+
         <p> <a href="index.html">Home Page</a></p>
         <br>
-        <br>
+        
             <div id="audio">
             <h1 id="audproj">Audio Project</h1>
                 <style> #audproj {color: goldenrod;}</style>
